--- a/Yahtzee/MainWindow.xaml
+++ b/Yahtzee/MainWindow.xaml
@@ -23,7 +23,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Label FontSize="25" x:Name="captionOnes" Content="Ettor" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFF4E96"  Grid.Row="0" Grid.Column="0"/>
-        <TextBox  FontSize="25" x:Name="txtOnes" TextAlignment="Center"  HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Grid.Row="0" Grid.Column="1"/>
+        <TextBox  FontSize="25" x:Name="txtOnes" Text="0" TextAlignment="Center"  HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Grid.Row="0" Grid.Column="1"/>
 
         <Label x:Name="captionTwos"  FontSize="25" Content="Tvåor" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFF4E96"  Grid.Row="1" Grid.Column="0"/>
         <TextBox x:Name="txtTwos"   FontSize="25" TextAlignment="Center" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46"  Grid.Row="1" Grid.Column="1"/>
@@ -44,6 +44,8 @@
         <TextBox x:Name="txtBonus"  FontSize="25" TextAlignment="Center" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46"  Grid.Row="6" Grid.Column="1"/>
 
         <Label x:Name="captionTotal" FontSize="25" Content="Total" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFF4E96" FontWeight="Bold"  Grid.Row="7" Grid.Column="0"/>
-        <TextBox x:Name="txtTotal" FontSize="25" TextAlignment="Center" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46"  Grid.Row="7" Grid.Column="1"/>
+        <TextBox x:Name="txtTotal" FontSize="25" TextAlignment="Center" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="100"  Grid.Row="7" Grid.Column="1"/>
+        <Button x:Name="btnSum" Content="Summera" Width="100" Grid.Column="2" Grid.Row="7" Margin="15, 5, 5, 10" Click="btnSum_Click"/>
+
     </Grid>
 </Window>
