--- a/Yahtzee/MainWindow.xaml
+++ b/Yahtzee/MainWindow.xaml
@@ -21,12 +21,13 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="150" />
         </Grid.RowDefinitions>
         <Label FontSize="25" x:Name="captionOnes" Content="Ettor" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFF4E96"  Grid.Row="0" Grid.Column="0"/>
-        <TextBox  FontSize="25" x:Name="txtOnes" Text="0" TextAlignment="Center"  HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Grid.Row="0" Grid.Column="1"/>
+        <TextBox  FontSize="25" x:Name="txtOnes" Text="0" TextAlignment="Center"  HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46" Grid.Row="0" Grid.Column="1" TextChanged="txtOnes_TextChanged"/>
 
         <Label x:Name="captionTwos"  FontSize="25" Content="Tvåor" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFF4E96"  Grid.Row="1" Grid.Column="0"/>
-        <TextBox x:Name="txtTwos"   FontSize="25" TextAlignment="Center" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46"  Grid.Row="1" Grid.Column="1"/>
+        <TextBox x:Name="txtTwos"  Text="0" FontSize="25" TextAlignment="Center" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46"  Grid.Row="1" Grid.Column="1"/>
 
         <Label x:Name="captionThrees"  FontSize="25" Content="Treor" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFF4E96"  Grid.Row="2" Grid.Column="0"/>
         <TextBox x:Name="txtThrees"   FontSize="25" TextAlignment="Center" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="46"  Grid.Row="2" Grid.Column="1" />
@@ -46,6 +47,6 @@
         <Label x:Name="captionTotal" FontSize="25" Content="Total" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="#FFFF4E96" FontWeight="Bold"  Grid.Row="7" Grid.Column="0"/>
         <TextBox x:Name="txtTotal" FontSize="25" TextAlignment="Center" HorizontalAlignment="Left" Height="50" TextWrapping="Wrap" VerticalAlignment="Top" Width="100"  Grid.Row="7" Grid.Column="1"/>
         <Button x:Name="btnSum" Content="Summera" Width="100" Grid.Column="2" Grid.Row="7" Margin="15, 5, 5, 10" Click="btnSum_Click"/>
-
+        <ListBox x:Name="lstValues" Grid.Row="8" Grid.Column="2" Height="150" />
     </Grid>
 </Window>
