--- a/FL2/MainWindow.xaml
+++ b/FL2/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="181,172,0,0" VerticalAlignment="Top" Height="75" Width="141" Click="button_Click"/>
+        <Button x:Name="button" Content="OK" HorizontalAlignment="Left" Margin="181,172,0,0" VerticalAlignment="Top" Height="75" Width="141" Click="button_Click"/>
         <Label x:Name="lblResult" HorizontalAlignment="Left" Margin="209,296,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtName" HorizontalAlignment="Left" Margin="363,306,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="btn2" Content="Button" HorizontalAlignment="Left" Margin="522,119,0,0" VerticalAlignment="Top" Click="btn2_Click"/>
